fixed styles for filter on safari (#98)

--- a/src/app/modules/search/search.component.scss
+++ b/src/app/modules/search/search.component.scss
@@ -1,11 +1,12 @@
 @import "variables";
 @import "utils/utils";
 
-mat-progress-bar{
+mat-progress-bar {
   position: fixed;
   bottom: 0;
   z-index: 100;
 }
+
 .wrap-search-page-layout {
   display: flex;
   flex-direction: row;
@@ -23,7 +24,7 @@ mat-progress-bar{
 
     agm-map {
       display: flex;
-      height: calc(100vh - 50px);
+      height: calc(100vh + 20rem);
       width: 30vw;
 
       @include if-smaller-than(tablet) {
@@ -37,7 +38,6 @@ mat-progress-bar{
     display: flex;
     flex: 0 0 70%;
     flex-direction: column;
-    height: calc(100vh - 50px);
     margin: 0 auto;
     overflow: scroll;
 
@@ -73,7 +73,7 @@ mat-progress-bar{
         padding: 1rem;
 
         @include if-smaller-than(xs) {
-          font-size: $small-fontsize!important;
+          font-size: $small-fontsize !important;
         }
       }
 
@@ -83,6 +83,7 @@ mat-progress-bar{
           color: $dark-text-color;
           font-size: $h5-fontsize;
         }
+
         &-groups {
           align-self: flex-end;
           color: $submit-button-color;
@@ -194,4 +195,8 @@ mat-progress-bar{
     display: flex;
     flex-direction: column;
   }
+}
+
+.wrap-bike-tile-grid {
+  height: 100vh;
 }
